--- a/1/index.html
+++ b/1/index.html
@@ -11,7 +11,7 @@
   <h1>Viktoriia Panarina</h1>  
   <h2>40-41m</h2>
   <h3>Мотивация :</h3>
-  <p>Пришла на курс за новыми знаниями и навыками. </p>
+  <p>Пришла на курс за новыми знаниями и навыками </p>
   <h3>Навыки :</h3>
   <p>Базовые знания HTML,CSS; Уверенный пользователь ПК.</p>
   <h3>Мое образование :</h3>
