--- a/maket27_10/maket.html
+++ b/maket27_10/maket.html
@@ -13,8 +13,8 @@
           box-sizing: border-box;
       }
       body,
-      .wrapper,
-      html{
+      html,
+      .wrapper {
         height: 100%;
       }
       .wrapper{
