--- a/Academy/academy.html
+++ b/Academy/academy.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academy Project</title>
    
-    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css">
-
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
    <style>
      @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Open+Sans&display=swap');
      body {
@@ -35,9 +34,30 @@
      }
      main {
         background: white;
+        padding: 40px;
      }
      .userbar {
         background: blue;
+     }
+     .search {
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+      width: 300px;
+      border-radius: 12px;
+      padding-left: 10px;
+      display: flex;
+      align-items: center;
+     }
+     .search__input {
+      border: none;
+      font-size: 1rem;
+      padding: 1rem;
+     }
+     .search__input:focus {
+      outline: none;
+     }
+     .search__icon {
+      font-size: 1.5rem;
+      color: gray;
      }
 
     </style>
@@ -48,7 +68,12 @@
 
         </aside>
         <main>
-
+         <div class="search">
+            <span class="search__icon">
+               <i class="las la-search"></i>
+            </span>
+            <input type="text" class="search__input" placeholder="Search">
+         </div>
         </main>
         <div class="userbar">
 
